Closed Bug 1831120 Opened 2 years ago Closed 2 years ago

`GPUBuffer` missing `readonly attribute`s

Categories

(Core :: Graphics: WebGPU, defect)

defect

Tracking

()

RESOLVED FIXED
115 Branch
Tracking Status
firefox115 --- fixed

People

(Reporter: ErichDonGubler, Assigned: ErichDonGubler)

References

Details

Attachments

(2 files, 1 obsolete file)

If you navigate to https://thimbleberry.dev after consuming the patch stack associated with bug 1830762, one encounters the following error in Nightly:

Uncaught (in promise) TypeError: GPURenderPassEncoder.draw: Argument 1 is not a finite value, so is out of range for unsigned long.
    encodeCommands MosaicShader.ts:96
    stampRange ShaderGroup.ts:21
    <snip>

…which is caused by a reference to a GPUBuffer's size attribute being undefined. 😲

It turns out that our implementation of WebGPU doesn't populate the readonly attributes specified to be on GPUBuffer at all! We should, according to section 5.1 ("GPUBuffer") of the current WebGPU v1 spec. draft (link).

Attached file D177056 (obsolete) —
Assignee: nobody → egubler
Attachment #9331404 - Attachment is obsolete: true

Sigh, the attachments/patch reviews associated got screwed up, because I typed the wrong bug in my patch messages. They're using a weird Custom policy, and they're not auto-attached, so I did my best with manual attachments, but…it's not the same as what we normally see. 😖

Pushed by egubler@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/402fde4fd386 feat(webgpu): add `GPUBuffer` attributes r=webgpu-reviewers,webidl,saschanaz,jimb https://hg.mozilla.org/integration/autoland/rev/f4b1acbddf56 style(webgpu): add space b/w `GPUBuffer.{unmap,destroy}` to match spec. r=webgpu-reviewers,webidl,saschanaz,jimb
Status: NEW → ASSIGNED
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 115 Branch
Regressions: 1860826
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: