Bug 1831120: feat(webgpu): add `GPUBuffer` attributes r=webgpu-reviewers,webidl,saschanaz,jimb

Differential Revision: https://phabricator.services.mozilla.com/D177055